kubernetes/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
  - port: 80
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: frontend-image
        ports:
        - containerPort: 80
          name: http-port
        livenessProbe:
          httpGet:
            path: /index.html
            port: http-port
          failureThreshold: 1
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /index.html
            port: http-port
          failureThreshold: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /index.html
            port: http-port
          failureThreshold: 1
          periodSeconds: 10
